--- a/src/views/UserForm.mxml
+++ b/src/views/UserForm.mxml
@@ -151,7 +151,7 @@
 		
 		<s:VGroup width="100%" height="100%" horizontalAlign="center" verticalAlign="middle">
 			
-			<s:BitmapImage source="@Embed('/assets/images/logo.png')"/>
+			<s:BitmapImage source="{Resource.LOGO}"/>
 			<s:Spacer height="33"/>
 			<s:Form id="userform"  horizontalCenter="0" verticalCenter="0" backgroundAlpha="0">
 				<s:layout>
