--- a/src/views/CameraCapture.mxml
+++ b/src/views/CameraCapture.mxml
@@ -159,6 +159,13 @@
 
             theUser.destFileName = theUser.urn + "-" + StringUtils.generateRandomString(4) + ".jpg";
             trace("new filename: " + theUser.firstname);
+
+            if (data.facebook) {
+                theUser.facebook=true;
+
+            } else {
+                theUser.facebook=false;
+            }
             /*
              *
              * This is a new view to quickly logout from whichever view you are on.
@@ -209,11 +216,7 @@
         }
 
 
-        protected function httpservice_faultHandler(event:FaultEvent):void {
-            savePhotoLocally();
-            //this.navigator.dispatchEvent(new KioskError(KioskError.ERROR, event.fault.faultString, "NETWORK ERROR, PROCESSING OFFLINE",savePhotoLocally));
 
-        }
 
 
         // CAMERA HANDLING
@@ -241,18 +244,7 @@
         }
 
 
-        private function onLoadFileClick():void {
-            //create the FileReference instance
-            file = new File();
-            //listen for when they select a file
-            file.addEventListener(Event.SELECT, takePhotoCompleteHandler);
 
-            //listen for when then cancel out of the browse dialog
-            //file.addEventListener(Event.CANCEL,onCancel);
-
-            //open a native browse dialog that filters for text files
-            //file.browse();
-        }
 
 
         //when the selection is complete upload it
@@ -291,13 +283,15 @@
 
             //theUser.destFileName=theUser.urn+"-"+StringUtils.generateRandomString(4)+".jpg";
 
+            var writeSuccess:Boolean = true;
+
             var fileParts:Array = theUser.destFileName.split(".");
 
             theUser.destFileName = fileParts[0] + "[" + numPhotos.value.toString() + "].jpg";
 
             destFile = File.documentsDirectory.resolvePath(theUser.spoolerPath + File.separator + theUser.destFileName);
             trace("destFileName " + theUser.destFileName);
-            trace("destFile " + destFile.url);
+            trace("destFile " + destFile.nativePath);
 
             //Use a FileStream to save the bytearray as bytes to the new file
             var fs:FileStream = new FileStream();
@@ -309,89 +303,29 @@
                 //close the file
                 fs.close();
             } catch (e:Error) {
+                writeSuccess = false;
                 trace("******** error saving file" + e.message);
                 this.navigator.dispatchEvent(new KioskError(KioskError.ERROR, e.message, "I/O error sending to printer, check SD Card available space"));
             } finally {
                 fs.close();
             }
-
-            ftpCopy = new FTPCopy(destFile, this.parentApplication.localURL + "upload.php");/*
-            ftpCopy.addEventListener(IOErrorEvent.IO_ERROR, handleLocalError);
-             ftpCopy.addEventListener(UploadResultEvent.SUCCESS, onCompleteLocal);
-             ftpCopy.addEventListener(UploadResultEvent.ERROR, onErrorUpload);
-             ftpCopy.start();*/
-
-
-
-
-            this.stage.setAspectRatio(StageAspectRatio.LANDSCAPE);
-            //this.stage.setOrientation(StageOrientation.DEFAULT);
-
-            uploadPhoto();
-            trace("encodingComplete");
-            photoPrinted = true;
-            complete();
-        }
-
-        private function onErrorUpload(e:UploadResultEvent) {
-            this.navigator.dispatchEvent(new KioskError(KioskError.MODAL, e.message, "SERVER RETURNER ERROR", complete, riprova));
-        }
-
-        private function onCompleteLocal(e:UploadResultEvent = null) {
-            uploadPhoto();
-            trace("photo uoloded locally");
-            photoPrinted = true;
-            complete();
-        }
-
-        private function handleLocalError(e:IOErrorEvent):void {
-            this.navigator.dispatchEvent(new KioskError(KioskError.MODAL, "The local server appears to be offline. Please check the laptop and the wireless connection", "ERROR SENDING TO PRINTER", complete, riprova));
-        }
-
-        private function cancella():void {
-
-        }
-
-        private function riprova(stringa:* = null):void {
-            ftpCopy.start();
-        }
-
-        // uploads the photo
-        protected function savePhotoLocally(e:Event = null):void {
-            trace("save foto locally" + theUser.destFileName);
-
-            var moveFile:File = File.documentsDirectory.resolvePath(theUser.batchPath + theUser.destFileName);
-            try {
-                destFile.copyTo(moveFile, true);
-                photoPublished = true;
-            } catch (e:Error) {
-                trace("******** error saving file" + e.message);
-                this.navigator.dispatchEvent(new KioskError(KioskError.ERROR, e.message, "I/O error, check SD Card available space"));
-            }
-            var result:String = theUser.saveXML();
-            if (result != "OK") {
-                this.navigator.dispatchEvent(new KioskError(KioskError.ERROR, result, "I/O error, check SD Card available space"));
-            } else {
-                complete();
+            if (writeSuccess) {
+                Uploader.instance.addFile(destFile, UserObject.getInstance().JSONobject, this.parentApplication.baseURL + "uploader.php");
+                //ftpCopy = new FTPCopy(destFile, this.parentApplication.localURL + "upload.php");/*
+                this.stage.setAspectRatio(StageAspectRatio.LANDSCAPE);
+                this.navigator.dispatchEvent(new ViewEvent(ViewEvent.LOCATION_GAME_COMPLETE));
             }
         }
 
-        protected function uploadPhoto():void {
 
-                Uploader.instance.addFile(destFile);
-                Uploader.instance.start(this.parentApplication.baseURL + "uploader.php");
 
-                fileTransfer = true;
 
-                complete();
 
-        }
 
-        protected function onFileError(error:IOErrorEvent):void {
-            //this.navigator.dispatchEvent( new KioskError(KioskError.ERROR, error.text.toString(), "Upload error, switching to batch mode",savePhotoLocally ) );
-            removeFileListeners();
-            savePhotoLocally();
-        }
+
+
+
+
 
         protected function updateProgress(event:ProgressEvent):void {
             var perc:Number = Math.round(event.bytesLoaded * 100 / event.bytesTotal);
@@ -399,37 +333,7 @@
             trace("progress:" + event.bytesLoaded + "of:" + event.bytesTotal);
         }
 
-        protected function uploadCompleteHandler(event:Event):void {
-            removeFileListeners();
-            this.navigator.dispatchEvent(new KioskProgressEvent(KioskProgressEvent.UPDATE_COMPLETE));
-            trace("upload complete");
-            takePhotoButton.enabled = true;
-            statusText.text = "Photo Uploaded";
-            var passVars:Object = new Object();
-            passVars.urn = currentURN;
-            passVars.file = theUser.destFileName;
-            passVars.extraterms = theUser.extraterms;
-            //passVars.caption = caption.text;
 
-
-            passVars.facebook_optin = 1;
-
-
-            if (data.facebook) {
-                passVars.facebook_optin = 1;
-                statusText.text = "Publishing on Facebook...";
-            } else {
-                passVars.facebook_optin = 0;
-                statusText.text = "Sending Email...";
-            }
-
-            passVars.type = this.applicationType;
-
-            publishPhoto.send(passVars);
-
-            this.navigator.dispatchEvent(new KioskProgressEvent(KioskProgressEvent.NOTIFY, statusText.text));
-
-        }
 
 
         protected function openUploadHandler(event:Event):void {
@@ -446,18 +350,7 @@
             return path;
         }
 
-        protected function publishPhoto_resultHandler(event:ResultEvent):void {
-            this.navigator.dispatchEvent(new KioskProgressEvent(KioskProgressEvent.UPDATE_COMPLETE));
-            if (event.result.result != "SUCCESS") {
-                this.navigator.dispatchEvent(new KioskError(KioskError.ERROR, event.result.toString(), "ERROR", restart));
-            } else {
-                trace("photo published!");
-                photoPublished = true;
-                posts += 1;
-                complete();
-                //this.currentState="default";
-            }
-        }
+
 
         protected function complete(stringa:* = null):void {
             trace("complete! published:" + photoPublished.toString() + " sent to print:" + photoPrinted.toString());
@@ -472,33 +365,10 @@
         }
 
         protected function cancelBTN_clickHandler(event:MouseEvent):void {
-            if (fileTransfer) {
-                removeFileListeners();
-            }
+
             this.navigator.dispatchEvent(new ViewEvent(ViewEvent.LOCATION_RESTART));
         }
 
-        protected function removeFileListeners():void {
-            if (destFile != null) {
-
-                if (destFile.hasEventListener(Event.COMPLETE)) {
-                    trace("removing COMPLETE event");
-                    destFile.removeEventListener(Event.COMPLETE, uploadCompleteHandler);
-                }
-                if (destFile.hasEventListener(Event.OPEN)) {
-                    trace("removing OPEN event");
-                    destFile.removeEventListener(Event.OPEN, openUploadHandler);
-                }
-                if (destFile.hasEventListener(ProgressEvent.PROGRESS)) {
-                    trace("removing PROGRESS event");
-                    destFile.removeEventListener(ProgressEvent.PROGRESS, updateProgress);
-                }
-                if (destFile.hasEventListener(IOErrorEvent.IO_ERROR)) {
-                    trace("removing IO_ERROR event");
-                    destFile.removeEventListener(IOErrorEvent.IO_ERROR, onFileError);
-                }
-            }
-        }
 
         protected function get canPost():Boolean {
             // if more than 5 posts deselect the checkbox
@@ -509,31 +379,20 @@
 
 
         protected function view1_removedFromStageHandler(event:Event):void {
-            removeFileListeners();
+
             if (this.stage.hasEventListener(StageOrientationEvent.ORIENTATION_CHANGING)) {
                 this.stage.removeEventListener(StageOrientationEvent.ORIENTATION_CHANGING, onOrientationChanging);
             }
-            removeFileListeners();
-
-            if (ftpCopy.hasEventListener(IOErrorEvent.NETWORK_ERROR)) {
-                removeEventListener(IOErrorEvent.NETWORK_ERROR, handleLocalError);
-            }
-            if (ftpCopy.hasEventListener(UploadResultEvent.SUCCESS)) {
-                removeEventListener(UploadResultEvent.SUCCESS, onCompleteLocal);
-            }
-            if (ftpCopy.hasEventListener(UploadResultEvent.ERROR)) {
-                removeEventListener(UploadResultEvent.ERROR, onErrorUpload);
-            }
 
 
-            ftpCopy = null;
             theJPG.removeEventListener(ProgressEvent.PROGRESS, onEncodingProgress);
             theJPG.removeEventListener(Event.COMPLETE, onEncodeComplete);
             theJPG = null;
-            theBitmapAsset = null;
-            photoBitmaps[0] = null;
-            photoBitmaps[1] = null;
-            photoBitmaps[2] = null;
+            theBitmapAsset.bitmapData.dispose();
+            theBitmapAsset=null;
+            photoBitmaps[0].dispose();
+            photoBitmaps[1].dispose();
+            photoBitmaps[2].dispose();
 
             if (!theUser.isBatch) {
                 if (logOutView != null) {
@@ -615,16 +474,13 @@
         }
 
         private function hGroup1_updateCompleteHandler(event:FlexEvent):void {
-            trace("photo group updated width is:"+event.currentTarget.width)
+            trace("photo group updated width is:" + event.currentTarget.width)
 
         }
         ]]>
 	</fx:Script>
 	
-	<fx:Declarations>
-		<!-- Place non-visual elements (e.g., services, value objects) here -->
-		<s:HTTPService id="publishPhoto" resultFormat="flashvars" method="POST" url="{this.parentApplication.baseURL+'publishphoto.php'}" result="publishPhoto_resultHandler(event)" fault="httpservice_faultHandler(event)" />
-	</fx:Declarations>
+
 	<s:states>
 		<s:State name="default" />
 		<s:State name="preview" />
